<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_syllogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/syllogo_margintop"
        android:src="@drawable/syllogologin" >
    </ImageView>

    <RelativeLayout
        android:id="@+id/rel_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_syllogo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/signin_marginleft"
        android:layout_marginRight="@dimen/signin_marginright"
        android:layout_marginTop="@dimen/signin_margintop" >

        <LinearLayout
            android:id="@+id/liout_signinbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signbox_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="@dimen/signin_edittextwidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/etxt_background"
                android:drawableLeft="@drawable/signin_emailicon"
                android:drawablePadding="@dimen/signin_drawablepadding"
                android:hint="@string/email"
                android:singleLine="true"
                android:textColorHint="#FFFFFF"
android:textCursorDrawable="@drawable/cursordrawable"
                android:textColor="@color/white"
                android:textSize="@dimen/signin_textsize" >
            </EditText>

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="@dimen/signin_edittextwidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/password_bg"
                android:drawableLeft="@drawable/signin_passwordicon"
                android:drawablePadding="14dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                 android:textColorHint="#FFFFFF"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/cursordrawable"
                android:textSize="@dimen/signin_textsize" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/liout_loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liout_signinbox"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signin_buttonmargintop"
                android:background="@drawable/selector_btnsignin"
                android:onClick="userSignin"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="18sp"
                android:text="@string/text_btnsignin"
                android:textColor="@color/white" >
            </Button>

            <TextView
                android:id="@+id/txt_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/signin_textviewmargintop"
                android:text="@string/text_forgotpassword"
                android:textColor="@color/white"
                android:textSize="@dimen/signin_textviewsize"
                android:background="@drawable/textview_selector">
            </TextView>


        </LinearLayout>





        <LinearLayout
            android:id="@+id/liout_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liout_loginbtn"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btnfacebook"
                android:text="Facebook Login"
                android:textColor="@color/white"
                android:onClick="doFacebookLogin"

                >
                </Button>
</LinearLayout>
        <LinearLayout
            android:id="@+id/liout_newuser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liout_facebook"
    android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/sylsignin_margintop" >

            <TextView
                android:id="@+id/txt_newuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/signin_textviewmarginleft"
                android:layout_marginTop="@dimen/signin_buttonmargintop"
                android:text="@string/text_newhere"
                android:textColor="@color/white"
                android:textSize="@dimen/signin_newusertextsize" >
            </TextView>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/signin_signupbtnmarginleft"
                android:layout_marginTop="@dimen/signin_signupbtnmargintop"
                android:background="@drawable/selector_btnsignin"
                android:onClick="navigatetoSignupScreen"
                android:gravity="center"
                     android:textSize="18sp"
                android:text="@string/text_signup"
                android:textColor="@color/white" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>